# Blog_Platform

./: .env  Cargo.toml
migrations/: 20220101000000_init.sql
src/: db.rs
